# rust-lambda-test

./: Cargo.toml  load-test.js  package-lock.json  package.json
local_dev/: Cargo.toml
local_dev/src/: main.rs
src/: main.rs
