[package]
name = "hello"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
lambda_runtime = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rusoto_dynamodb = "0.45.0"
rusoto_core = "0.45.0"
dynomite = "0.10"
uuid = "0.8"
futures = "0.3"
env_logger = "0.7.1"
log = "0.4.11"
lazy_static = "1.4.0"

[profile.release]
opt-level = "z"

[workspace]
members = [
    "local_dev"
]
