[package]
name = "local_dev"
version = "0.1.0"
authors = ["Ibrahim M <dev@beemstream.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
rusoto_dynamodb = "0.45.0"
rusoto_core = "0.45.0"
dynomite = "0.10"
futures = "0.3"
